# trino-query-runner

./: .gitignore  Cargo.toml  Makefile  README.md
docker/: Dockerfile
src/: command_line.rs  lib.rs  main.rs  persistence.rs  template_renderer.rs  trino_client.rs
